fixed overflow

--- a/src/app/pages/dashboard/dashboard.css
+++ b/src/app/pages/dashboard/dashboard.css
@@ -53,7 +53,7 @@ body {
   align-items: flex-start;
   overflow-x: auto;
   overflow-y: hidden;
-  padding: 0 2rem 1.5rem 2rem;
+  padding: 0 2rem 0rem 2rem;
   scroll-behavior: smooth;
   scrollbar-width: none;
   -ms-overflow-style: none;
